core/home remplazar A con button

--- a/idgs9A/core/templates/core/home.html
+++ b/idgs9A/core/templates/core/home.html
@@ -14,9 +14,9 @@
             <div class="col-lg-6 mx-auto">
               <p class="lead mb-4">Aplicaciones de Django creadas por equipos del grupo 9A de Ingeniería en Desarrollo y Gestión de Software, implementando flujos de trabajo remoto con Git y GitHub</p>
               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <a type="button" href="{% url 'home' %}" class="btn btn-primary btn-lg px-4 gap-3">Videogames</button>
+                <button type="button" href="{% url 'home' %}" class="btn btn-primary btn-lg px-4 gap-3">Videogames</button>
                 <a type="button" class="btn btn-success btn-lg px-4">Series</a>
-                <a type="button" class="btn btn-light btn-lg px-4">EquipoJWN</button>
+                <button type="button" class="btn btn-light btn-lg px-4">EquipoJWN</button>
               </div>
             </div>
           </div>
