--- a/idgs9A/books/templates/books/books.html
+++ b/idgs9A/books/templates/books/books.html
@@ -1,43 +1,14 @@
 {% extends 'books/base.html' %} {% block content %}
 
 <div class="books">
-    
+    {% for book in book %}
     <div class="card-book">
-        <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fstateofmind13.files.wordpress.com%2F2012%2F03%2Fcatching-fire-book-cover.jpg&f=1&nofb=1" alt="">
-        <h3>Autor: Desconocido</h3>
-        <p>Fecha de edición: 22/06/2000</p>
+        <img src="media/books/{{book.image_book}}" alt="">
+        <h2>Libro: {{book.title_book}}
+        <h3>Autor: {{book.author_book}}</h3>
+        <p>Copias vendidas: {{book.count_sale_book}}</p>
     </div>
-
-    <div class="card-book">
-        <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fstateofmind13.files.wordpress.com%2F2012%2F03%2Fcatching-fire-book-cover.jpg&f=1&nofb=1" alt="">
-        <h3>Autor: Desconocido</h3>
-        <p>Fecha de edición: 22/06/2000</p>
-    </div>
-    
-    <div class="card-book">
-        <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fstateofmind13.files.wordpress.com%2F2012%2F03%2Fcatching-fire-book-cover.jpg&f=1&nofb=1" alt="">
-        <h3>Autor: Desconocido</h3>
-        <p>Fecha de edición: 22/06/2000</p>
-    </div>
-    
-    <div class="card-book">
-        <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fstateofmind13.files.wordpress.com%2F2012%2F03%2Fcatching-fire-book-cover.jpg&f=1&nofb=1" alt="">
-        <h3>Autor: Desconocido</h3>
-        <p>Fecha de edición: 22/06/2000</p>
-    </div>
-
-    <div class="card-book">
-        <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fstateofmind13.files.wordpress.com%2F2012%2F03%2Fcatching-fire-book-cover.jpg&f=1&nofb=1" alt="">
-        <h3>Autor: Desconocido</h3>
-        <p>Fecha de edición: 22/06/2000</p>
-    </div>
-
-    <div class="card-book">
-        <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fstateofmind13.files.wordpress.com%2F2012%2F03%2Fcatching-fire-book-cover.jpg&f=1&nofb=1" alt="">
-        <h3>Autor: Desconocido</h3>
-        <p>Fecha de edición: 22/06/2000</p>
-    </div>
-    
+    {% endfor %}
 </div>
 
 {% endblock %}
