añediendo mas campos a views, urls y templates

--- a/idgs9A/books/templates/books/base.html
+++ b/idgs9A/books/templates/books/base.html
@@ -18,7 +18,8 @@
         <ul>
             <li><a href="/books/home">Home</a></li>
             <li><a href="/books/books">Books</a></li>
-            <li><a href="/books/prestamos">Books</a></li>
+            <li><a href="/books/clientes">Clientes</a></li>
+            <li><a href="/books/prestamos">Adeudos</a></li>
         </ul>
     </nav>
 
