--- a/idgs9A/books/templates/books/prestamos.html
+++ b/idgs9A/books/templates/books/prestamos.html
@@ -19,7 +19,7 @@
             <td>{{user.user_celphone}}</td>
             <td>--{{user.user_addres}}</td>
             
-            <td><a href="../books/find-book/{{user.reference_bookUser}}"><button>Libro</button></a></td>
+            <td class="btn-libro" ><a href="../books/find-book/{{user.reference_bookUser}}"><button>Libro</button></a></td>
           
         </tr>
         {% endfor %}
