--- a/idgs9A/books/templates/books/clientes.html
+++ b/idgs9A/books/templates/books/clientes.html
@@ -2,7 +2,7 @@
 <h1>Listado de Clientes: </h1>
     <center>
     
-    <table class="">
+    <table>
         <thead>
           <tr>
             <th scope="col">Nombre</th>
