--- a/idgs9A/Directores/templates/infoDir/about.html
+++ b/idgs9A/Directores/templates/infoDir/about.html
@@ -133,7 +133,7 @@
       <div class="col-lg-4">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
-        <h2 class="fw-normal">Janathan Galindo Gonzales</h2>
+        <h2 class="fw-normal">Jonathan Galindo Gonzales</h2>
         <p>Formacion academica</p>
         <p><a class="btn btn-secondary" href="https://getbootstrap.com/docs/5.2/examples/carousel/#">Contacto »</a></p>
       </div>
