--- a/idgs9A/core/templates/core/about.html
+++ b/idgs9A/core/templates/core/about.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
-<!-- saved from url=(0053)https://getbootstrap.com/docs/5.2/examples/jumbotron/ -->
+<!-- saved from url=(0052)https://getbootstrap.com/docs/5.2/examples/carousel/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.98.0">
-    <title>Peliculas</title>
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/jumbotron/">
+    <title>Contacto</title>
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/carousel/">
+
+    <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"><!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-<link href="./Jumbotron example · Bootstrap v5.2_files/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+ 
+
+    
+
+<link href="./Carousel Template · Bootstrap v5.2_files/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+    <!-- Favicons -->
 <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
 <link rel="icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
 <link rel="icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
@@ -17,6 +27,8 @@
 <link rel="mask-icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
 <link rel="icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/favicon.ico">
 <meta name="theme-color" content="#712cf9">
+
+
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -69,28 +81,22 @@
         -webkit-overflow-scrolling: touch;
       }
       img{
-        max-width: 50%;
-        max-height: 50%;
-        float:right;
-        margin-right: 20px;
+        max-width: 100%;
+        max-height: 100%;
       }
       .pic {
-        height: ;
-        width: 1000px;
-        clear:right;
-        position: relative;
-        display: inline-block;
-        text-align: center;
-        margin-right: 200px;
+        height: 400px;
+        width: 400px;
        }
     </style>
-</head>
- 
-<body>
-<main>
-  <div class="container py-4">
-    <header class="pb-3 mb-4 border-bottom">
-        <nav class="navbar navbar-expand-lg bg-light">
+
+  </head>
+  <body>
+    
+<header>
+    <div class="container py-4">
+        <header class="pb-3 mb-4 border-bottom">
+          <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -110,50 +116,76 @@
                 </div>
             </div>
           </nav>
-      
-    </header>
+        </header>
+</header>
 
-    <div class="p-4 p-md-5 mb-4 rounded text-bg-dark">
-        <div class="col-md-6 px-0" >
-          <h1 class="display-4 fst-italic">Mejores peliculas... </h1>
-          <div class="pic">
-            <img src="https://laestatuilla.com/wp-content/uploads/2020/09/Christopher-Nolan-Ranking.jpg" >
-            <p>El placer de la mirada, el gusto de ver películas, de gozar del llamado séptimo arte, es el tema de este número, que desde muchos puntos de vista nos invita a celebrar los momentos donde confluyen imagen, técnica, acción, pesadillas, sueños. </p>
-       </div>
-          <p class="lead mb-0"><a href="#" class="text-white fw-bold">Dime mas..</a></p>
+<main>
+
+  
+   
+    <div class="carousel-inner">
+      <div class="carousel-item">
+        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
+         </div>
+         <div class="carousel-item">
+          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
+
+         <div class="container">
+          
         </div>
       </div>
-       <div class="row mb-2">
-        <div class="col-md-6">
-          <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 text-primary">James Cameron</strong>
-              <h3 class="mb-0">Avatar</h3>
-              <div class="mb-1 text-muted">Julio 2022</div>
-             
-              <p class="card-text mb-auto">Jake Sully y Neytiri han formado una familia tras todo lo vivido en la primera entrega y están dispuestos a hacer lo que sea por seguir juntos. El problema es que una antigua amenaza reaparece con el objetivo de completar su trabajo, por lo que se ven obligados a abandonar su hogar y explotar nuevas regiones de Pandora.</p>
-              <a href="#" class="stretched-link">Leer mas...</a>
-            </div>
-           
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 text-success">Michell Bay</strong>
-              <h3 class="mb-0">Transformers: el despertar de las bestias</h3>
-              <div class="mb-1 text-muted">Junio 2023</div>
-              <p class="mb-auto">Por el momento lo que se conoce del argumento de esta nueva película de acción es que se ubicará en el año 1994 y su protagonismo recaerá en Noah, un exmilitar que es un genio de la tecnología, y Elena, una investigadora de un museo. La acción se irá desarrollando a lo largo de la película en las localizaciones de Brooklyn, Nueva York y Machu Picchu, en Perú.</p>
-              <a href="#" class="stretched-link">Leer mas..</a>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <svg class="bd-placeholder-img" width="200" height="250" xmlns="https://i.blogs.es/e92eec/avatar-el-sentido-del-agua/450_1000.jpeg" role="img"  preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
-    
-            </div>
-          </div>
+      <div class="carousel-item active">
+        <div class="container">
+          <div class="carousel-caption text-end">
+            
+             </div>
         </div>
       </div>
-    
+    </div>
+  
+   
   </div>
+
+  <div class="container marketing">
+
+    <div class="row">
+      <div class="col-lg-4">
+        <div class='pic'>
+          <img src='https://m.media-amazon.com/images/I/518yhz8M3gL._AC_SY606_.jpg'>
+        </div>
+        <h2 class="fw-normal">Astrid de Galindo Gonzales</h2>
+        <p>Formacion academica</p>
+        <p><a class="btn btn-secondary" href="https://www.facebook.com/yadis.astrid.7">Contacto »</a></p>
+      </div>
+      <div class="col-lg-4">
+        <div class='pic'>
+        <img src='https://m.media-amazon.com/images/I/51X5VwI-IDL._AC_SY741_.jpg'>
+        </div>
+        <h2 class="fw-normal">Jonathan Galindo Gonzales</h2>
+        <p>Formacion academica</p>
+        <p><a class="btn btn-secondary" href="https://www.facebook.com/jonat.SanchezR">Contacto »</a></p>
+      </div>
+      <div class="col-lg-4">
+        <div class='pic'>
+       <img src='https://m.media-amazon.com/images/I/61WIuhhgNdL._AC_SX466_.jpg'>
+        </img>
+        <h2 class="fw-normal">Horacio Carmona Sanchez</h2>
+        <p>Formacion academica</p>
+        <p><a class="btn btn-secondary" href="https://www.facebook.com/Januslds">Contacto »</a></p>
+     
+      </div>
+    </div>
+</div>
+ <footer class="container">
+    <p class="float-end"><a href="https://getbootstrap.com/docs/5.2/examples/carousel/#">Inicio</a></p>
+    <p> · © 2022 JAH - Devolpers · </p>
+  </footer>
 </main>
+
+
+    <script src="./Carousel Template · Bootstrap v5.2_files/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+      
+  
+
 </body></html>
